Prevent case load by grade table being cut off by reducing font size in data tables

--- a/app/assets/sass/_wmt/_wmt-data-table.scss
+++ b/app/assets/sass/_wmt/_wmt-data-table.scss
@@ -29,6 +29,10 @@ table.data-table tr td{
     border: 1px solid #d9d9d9!important;
 }
 
+table.data-table th, table.data-table td {
+    font-size: 16px;
+}
+
 table.data-table tr td:not(:first-child) {
     text-align: center;
 }
